After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699303 - matroskademux: stream-format=raw missing from aac caps
matroskademux: stream-format=raw missing from aac caps
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.0.8
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-30 12:43 UTC by Ognyan Tonchev (redstar_)
Modified: 2013-05-01 14:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
matroskademux: add stream-format=raw to aac caps (1.01 KB, patch)
2013-04-30 12:43 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2013-04-30 12:43:43 UTC
Created attachment 242905 [details] [review]
matroskademux: add stream-format=raw to aac caps

I tried streaming matroska files with audio-aac over RTP (rtpmp4gpay) and discovered that caps negotiation for the audio stream failed due to missing stream-format in the caps.
Comment 1 Sebastian Dröge (slomo) 2013-05-01 13:47:42 UTC
commit 0584d5c4c91d13938972cfb46a14adb6e398e152
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Tue Apr 30 14:36:38 2013 +0200

    matroskademux: add stream-format=raw to aac caps
    
    https://bugzilla.gnome.org/show_bug.cgi?id=699303