matroskademux: add stream-format=raw to aac caps

https://bugzilla.gnome.org/show_bug.cgi?id=699303